forth/test/fail/test_stack_recur_then_throw.af
\ Must fail to compile: stack-CC requires throwing metadata before `recur`.
use' ../../lang_s.af

fun: .test_stack_recur_then_throw_fail ( val -- val )
  .dup =0 .then .ret end
  .dec .recur
  " late throw" .throw
end
